--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    <header class="header">
       <div class="container">
          <nav class="navbar">
-            <a href="#"><img src="./IMG/Tesla-Wordmark-Red.png" alt="Tesla-Wordmark" </a>
+            <a href="#"><img src="Tesla-Wordmark-Red.png" alt="Tesla-Wordmark" </a>
                <ul class="menu_1">
                   <li><a href="" class="item1 menu_item active">Model S</a></li>
                   <li><a href="" class="item2 menu_item">Model X</a></li>
