--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,700;1,500;1,600&display=swap"
       rel="stylesheet">
 
-   <link rel="stylesheet" href="./STYLES/style.css">
+   <link rel="stylesheet" href="style.css">
 
 
 </head>
